bugfix(video): fixed cropped vertical player

--- a/style.css
+++ b/style.css
@@ -148,6 +148,8 @@ section#slider {
 .media-wrapper {
     /* position: absolute; */
     align-self: center;
+    height: 100%;
+    width: 100%;
     border-radius: 10px;
     padding: 0 3px;
 }
